--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^1.0.7",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^11.11.1",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.32.6",
