--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "@auth/firebase-adapter": "^1.0.7",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.10.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "firebase": "^10.7.1",
     "firebase-admin": "^11.11.1",
     "next": "14.0.3",
@@ -20,6 +26,8 @@
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.32.6",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
