--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-email/components": "0.0.12",
+    "@react-email/render": "^0.0.10",
     "@tanstack/react-table": "^8.10.7",
     "@vercel/speed-insights": "^1.0.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "firebase-admin": "^11.11.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "1.10.0",
+    "resend": "^2.0.0",
     "sharp": "^0.32.6",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
@@ -35,6 +40,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.7",
