--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/firebase-adapter": "^1.0.7",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@paystack/inline-js": "^2.13.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
