--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-email/components": "0.0.12",
     "@react-email/render": "^0.0.10",
     "@tanstack/react-table": "^8.10.7",
+    "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
